fix: Move article title to multiple lines, allow for longer text in article titles on small sizes

--- a/components/Article/Article.module.scss
+++ b/components/Article/Article.module.scss
@@ -1,5 +1,11 @@
 @import "../../sass/global";
 
+.Card {
+  @include min-max-width($bp-unstack-cards, $bp-tablet) {
+    aspect-ratio: auto;
+  }
+}
+
 .Title,
 .Subtitle {
   @include min-width($bp-unstack-cards) {
@@ -33,8 +39,7 @@
 .Subtitle {
   @include min-width($bp-tiny) {
     > span {
-      display: inline-block;
-      vertical-align: top;
+      display: block;
     }
   }
 }
